--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     
   </body>
 
-<script src="./components/invia.js"> </script>
-
+<script src="./components/task-item.js"></script>
+<script src="./components/task-list.js"></script>
+<script src="./index.js"></script>   
+<script src="./store.js"></script>
 </html>
