--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </h1>
     <label for="name"> Cosa devi fare oggi? </label>
     <input type="text" id="text-box" size="20" value="">
-    <button onclick="submit()">invia</button>
+    <button onclick="renderElement()">invia</button>
     <ol id="lista"> </ol>
     
   </body>
