--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
     <button onclick="addTask()">
       +
     </button>
-    <div id="lista"> </div>
-    
+    <div><ul id="lista-todo"></ul></div>
+    <div><ul id="lista-done"></ul></div>
   </body>
 
 <script src="./store.js"></script>
 <script src="./components/task-item.js"></script>
 <script src="./components/task-list.js"></script>
+<script src="./components/done-item.js"></script>
+<script src="./components/done-list.js"></script>
 <script src="./index.js"></script>   
 </html>
