--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </body>
 
 <script src="./store.js"></script>
-<script src="./components/task-item.js"></script>
-<script src="./components/task-list.js"></script>
+<script src="./components/todo-item.js"></script>
+<script src="./components/todo-list.js"></script>
 <script src="./components/done-item.js"></script>
 <script src="./components/done-list.js"></script>
 <script src="./index.js"></script>   
